--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body, #root {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  overflow-x: clip;
   
   /* Native App Feel */
   -webkit-touch-callout: none;
